# firex

./: CMakeLists.txt  README.md
demo/: main.c
include/: firex.h
include/firex/: firex.h  headers.h  request.h
src/: firex.c  headers.c  request.c
